# joypad-os

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  README_JOYPAD_OS.md  mkdocs.yml
.github/workflows/: build.yml
docs/apps/: index.md  psx2usb.md  usb2neogeo.md
docs/core/: runtime_profile.md
docs/getting-started/: building.md
docs/hardware/builds/: psx2usb-qtpy.md
docs/input/: index.md  psx.md
docs/output/: gba-link-cable.md  index.md  usb-device.md
docs/protocols/: sinput.md
docs/retrofrog/usb4ami/: user_guide.md
esp/main/: CMakeLists.txt  flash_esp32.c
gba/: README.md
gba/joypad/: Makefile
gba/joypad/source/: display.c  display.h  eyes_anim.c  eyes_anim.h  main.c  mode_marker.c  mode_marker.h  splash.c  splash.h  splash_image.c  splash_image.h
gba/joypad/source/platform/: platform.h
gba/joypad/source/splash_images/: img_ps3.c  img_ps4.c  img_sinput.c  img_switch.c  img_xinput.c
gba/tools/: bin2c.py  png_to_splash.py
nrf/: CMakeLists.txt
nrf/src/: flash_nrf.c
src/: CMakeLists.txt  tusb_config.h
src/apps/bt2usb/: app.c
src/apps/gc2dc/: app.c  app.h  app_config.h
src/apps/gc2eth/: README.md  app.c  app.h  app_config.h  ch9120.c  ch9120.h  wshare_ch9120.c  wshare_ch9120.h
src/apps/gc2eth_feather/: app.c  app.h  app_config.h  w5500.c  w5500.h
src/apps/gc2usb/: app.c
src/apps/nes2usb/: app.c
src/apps/psx2usb/: app.c  app.h  app_config.h
src/apps/usb23do/: app.h
src/apps/usb2ami/: app.c
src/apps/usb2dc/: app.c
src/apps/usb2jag/: app.c  app.h  app_config.h  profiles.h
src/apps/usb2neogeo/: app.c  profiles.h
src/apps/usb2usb/: app.c
src/apps/usb2usb_remapper_v7_a/: app.c  app.h
src/apps/usb2usb_remapper_v7_b/: app.c  app.h  app_config.h
src/boards/: build_waveshare_rp2040_eth.sh  build_waveshare_rp2350b_plus_w.sh
src/boards/headers/: waveshare_rp2350b_plus_w.h
src/bt/btstack/: btstack_host.c
src/core/: app_registry.c  input_event.h
src/core/router/: router.c  router.h
src/core/services/button/: button.c
src/core/services/leds/neopixel/: ws2812.c  ws2812.h
src/core/services/profiles/: profile.c  profile.h  runtime_profile.c  runtime_profile.h
src/core/services/storage/: flash.c  flash.h
src/native/device/3do/: 3do_device.c  3do_device.h  3do_keyboard.c  3do_keyboard.h
src/native/device/amiga/: amiga_device.c  amiga_device.h
src/native/device/dreamcast/: dreamcast_device.c  dreamcast_device.h  dreamcast_display.c  dreamcast_display.h  vmu.c  vmu.h  vmu_default_icondata.h  vmu_sd.c  vmu_sd.h  vmu_storage.c  vmu_storage.h
src/native/device/gamecube/: gamecube_device.c
src/native/device/gpio/: gpio_device.c
src/native/device/jaguar/: jaguar_device.c  jaguar_device.h
src/native/device/loopy/: loopy_device.c
src/native/device/n64/: n64_device.c
src/native/device/nuon/: nuon_device.c
src/native/host/gc/: gba_multiboot.c  gba_multiboot.h  gba_payload.c  gc_host.c  gc_host.h  joybus_bridge.c  joybus_bridge.h
src/native/host/psx/: psx.pio  psx_host.c  psx_host.h
src/platform/: platform.h
src/platform/ch32/: platform_ch32.c
src/swd_flash/: flash_b_side.c  swd.c
src/uart_peer/: uart_peer.c  uart_peer.h
src/usb/usbd/: tusb_compat.h  usbd.c  usbd.h  usbd_mode.h
src/usb/usbd/cdc/: cdc.c  cdc_commands.c
src/usb/usbd/descriptors/: gba_link_descriptors.h  ps3_descriptors.h  sinput_descriptors.h
src/usb/usbd/drivers/: tud_gc_adapter.c  tud_xbone.c  tud_xid.c  tud_xinput.c
src/usb/usbd/modes/: gba_link_mode.c  gc_adapter_mode.c  ps3_mode.c  sinput_mode.c  xid_mode.c
src/usb/usbh/: usbh.c
src/usb/usbh/btd/: hci_transport_h2_tinyusb.c  hci_transport_h2_tinyusb.h
src/usb/usbh/hid/: hid.c  hid_registry.c  hid_registry.h
src/usb/usbh/hid/devices/generic/: hid_keyboard.c  sinput_host.c
src/usb/usbh/hid/devices/vendors/google/: google_stadia.c
src/usb/usbh/hid/devices/vendors/hori/: hori_horipad.c
src/usb/usbh/hid/devices/vendors/microsoft/: ms_sidewinder_commander.c  ms_sidewinder_dualstrike.c
src/usb/usbh/hid/devices/vendors/misc/: retrogames_thegamepad.c  retrogames_thegamepad.h
src/usb/usbh/hid/devices/vendors/nintendo/: switch2_pro.c
src/usb/usbh/hid/devices/vendors/sony/: sony_ds3.c  sony_ds4.c
src/usb/usbh/hid/devices/vendors/valve/: steam_controller_2.c  steam_controller_2.h
src/usb/usbh/msc/: msc_host.c  msc_host.h
src/usb/usbh/xbone_auth/: xbone_auth.c
src/usb/usbh/xinput/: xinput.c
tools/: .gitignore  bin2carray.py  cdc_bootsel.py  cdc_cmd.py  cdc_monitor.py  combine_uf2.py
tools/dolphin-fork/: README.md
tools/gba-bridge/: README.md  bin2c.py  eth-burst-test.py  eth-multiboot.js  eth-ping.py  eth-probe.js  eth-udp-ping.py  extract_gba_rom.py  index.js  package-lock.json  package.json  scan_gcm_fst.py  usbgba-burst-test.py  usbgba-multiboot.py  usbgba-ping.py
tools/joypad-bot/: README.md  bot.py  inference.py  manual_play.py  patch_add_state.py  playback.py  recorder.py  requirements.txt  train.py
tools/joypad-live/: README.md  dashboard.html  overlay.html  parity_test.sh  simulate_crowd_control.py  streamer-live-remap.md
tools/joypad-live/csharp/: JoypadLive.csproj  Program.cs
tools/joypad-live/python/: server.py
tools/joypad-live/restream-bot/: README.md  bot.py  oauth.py  requirements.txt
tools/joypad-live/twitch-bot/: README.md  bot.py  requirements.txt
tools/sinput-verify/: .gitignore  Makefile  README.md  cdcsend.c  hidread.c  main.c
tools/vmu/: gen_default_icondata.py
wch/: .gitignore  Makefile  README.md
wch/src/: button_wch.c  flash_wch.c  main.c  stubs_peripheral.c  tusb_config.h  ws2812_wch.c
wch/src/pico/: rand.h
